# chaos-viz

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NewProject.md  PIVOT.md  README.md  UIUA_GUIDE.md  index.html  package.json  prompt  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  uiua-defs-check.yml
.husky/: pre-commit
core/: .gitignore  Cargo.toml
core/src/: lib.rs
scripts/: sync-uiua-primitive-defs.sh  uiua-wasm-eval.sh
src/: App.tsx  index.css
src/components/: CanvasExportButton.tsx  CanvasPlot.tsx  CobwebMap.tsx  ConjugacyView.tsx  JuliaSet.tsx  Latex.tsx  LogisticBifurcation.tsx  LogisticMap.tsx  MandelbrotSet.tsx  MapPage.tsx  P5Plot.tsx  P5Sketch.tsx  QuadraticMap.tsx  canvasExport.ts  domExport.ts
src/maps/: henon.ts  index.ts  logistic-bif.ts  types.ts
src/sketches/: bifurcation.js  iteration.js  logistic_bifurcation.js  logistic_lyapunov.js  wrap.ts
src/uiua/: functions.ts  index.ts  wasm.ts
src/utils/: cobweb.ts  julia.ts
uiua-modules/: cobweb.ua  identity.ua  logistic.ua  prelude.ua  uiua_primitive_defs.rs
