[package]
name = "chaos-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
uiua = { version = "0.18.0-dev.4", default-features = false, features = ["web"] }
wasm-bindgen = "0.2.100"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["Performance", "Window"] }
